<resources>
    <string name="app_name">s181142_mappe2</string>
    <string name="title_contacts">s181142_mappe2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="delete">Delete Contact</string>
    <string name="stop">Stop Service</string>
    <string name="start">Start Service</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="service_wait">Waiting for SMS Service</string>
    <string name="save_contact">Save</string>
    <string name="BirthdayHelper">BirthdayHelper</string>
    <string name="main_activity_name">Contacts</string>
    <string name="birthday_mesasge_summary">Has birthday and SMS is sent!</string>
    <string name="sms_service_message">SMS service is starting</string>
    <string name="number_length">\u0020 digits long</string>
    <string name="name_input_validation">First name can not be empty</string>
    <string name="snackbar_color_red">#FF0000</string>
    <string name="snackbar_color_blue">#2979FF</string>
    <string name="lastname_input_validation">Last name can not be empty</string>
    <string name="phonenumber_input_validation">Phonenumber can not be empty</string>
    <string name="phonenumber_message">Phonenumber must be \u0020</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_mesasge">This contact will be deleted</string>
    <string name="add_contact_activity_title">Contact Information</string>
    <string name="add_contact_activity_title2">Edit Contact</string>
    <string name="birthday_message">Happy Birthday!</string>
    <string name="snackbar_contact_deleted">\u0020is deleted</string>
    <string name="snackbar_contact_added">\u0020 is added"</string>
    <string name="snackbar_contact_update">\u0020 is updated</string>
    <string name="edittext_birthday_hint">Birthday SMS text</string>
    <string name="edittext_firstname">First Name</string>
    <string name="edittext_last_name">Last Name</string>
    <string name="edittext_phone_number">Phone Number</string>
    <string name="calendar_birthday_text">Birthday date</string>
    <string name="settings_activity_title">Settings</string>
    <string name="alarm_time">Alarm time</string>
    <string name="sms_service_on_message">SMS Service is turned on</string>
    <string name="sms_service_off_message">SMS Service is turned off</string>
    <string name="snackbar_sms_validation">SMS text can not be emtpy</string>
</resources>
